--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ body, .app {
   text-align: center;
 }
 
-.open-search {
+.open-search, .open-bookshelf {
   position: fixed;
   right: 25px;
   bottom: 25px;
